# if97_py

./: .md  .txt  LICENSE  README.md  demo.py  latest-wheel.py3-none-any.whl  pyproject.toml  setup.py  tests.py
.github/workflows/: release.yml
if97/: bounds.py  consts.py  main.py
if97/fluid/: Helmholtz.py  __init__.py  bounds.py  h.py  v.py
if97/mix/: h.py  s.py  x.py
if97/steam/: Gibbs.py  h.py  s.py  v.py  w.py
if97/water/: Gibbs.py  h.py  s.py  v.py  w.py
if97_py/: SteamRegion.py  WaterRegion.py  __init__.py  bounds.py  consts.py  core.py  demo.py  main.py  types.py  vec.py
if97_py/fluid/: Helmholtz.py  bounds.py  h.py  v.py
if97_py/mix/: __init__.py  h.py  s.py  x.py
if97_py/steam/: Gibbs.py  __init__.py  h.py  s.py  t_p.py  v.py  w.py
if97_py/steam/t_p/: t_d.py
if97_py/water/: Gibbs.py  __init__.py  h.py  main.py  s.py  t_p.py  v.py  w.py
tests/: 3d_plot.py  gif.py  main.py  plot_3d.py  speed.py  t.py  test.py
