[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "if97"
version = "1.1.2"
authors = [
    {name = "Садовский М.К.", email = "i@maxim-sadovskiy.ru"},
]
license = {text = 'Apache-2.0'}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numba>=0.55.0"
]

[project.urls]
Repository = "https://github.com/Sam-Strand/if97_py"
